bk_ida/gccida/c0/peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3442:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v50; // [rsp+74h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3452:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classa; // [rsp+A4h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3454:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+B4h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3472:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[froma].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3475:33: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( &live, peep2_insn_data_0[froma].live_before); 
                                ^~~~~~~~~~~~~~~~~
                                peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3480:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[froma].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3483:38: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( &this_live, peep2_insn_data_0[froma].live_before); 
                                     ^~~~~~~~~~~~~~~~~
                                     peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3652:1: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'
peep2_find_free_register_search_ofs = 0; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3655:17: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
raw_regno = i + peep2_find_free_register_search_ofs; 
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3656:10: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
if ( i + peep2_find_free_register_search_ofs >= 53 ) 
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3703:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[modea] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3704:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v31 = mode_class_0[modea] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3761:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[modea] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3762:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v27 = mode_class_0[modea] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/recog.c:3773:1: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'
peep2_find_free_register_search_ofs = raw_regnoa; 
^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peep2_find_free_register/src/obj/recog.o] Error 1
